# CodeFox-CLI

./: .gitignore  README.md  SECURITY.md  WIKI.md  action.yml  codefox-template.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: publish.yml
codefox/: clean.py  cli_manager.py  init.py  main.py  scan.py
codefox/api/: base_api.py  gemini.py  ollama.py  openrouter.py
codefox/bots/: github_bot.py  gitlab_bot.py
codefox/cli/: base_cli.py  clean.py  init.py  list.py  scan.py
codefox/prompts/: audit_content.py  audit_system.py  prompt_template.py
codefox/prompts/audit/: audit_system.py
codefox/tools/: base_tool.py  rag_tool.py
codefox/utils/: github_bot.py  helper.py  local_rag.py  parser.py
tests/: test_base_api_config.py  test_clean.py  test_cli_manager.py  test_helper.py  test_local_rag.py  test_prompt_template.py  test_scan.py
