[project]
name = "codefox"
version = "0.4.5"
description = "CodeFox CLI - code auditing and code review tool"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CodeFox" },
]
keywords = [
    "ai",
    "code review",
    "cli",
    "static analysis",
    "ollama",
    "openai",
    "gemini",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "bm25s==0.3.0",
    "qdrant-client>=1.7.0",
    "fastembed>=0.3.0",
    "gitpython==3.1.46",
    "google-genai==1.63.0",
    "nltk==3.9.3",
    "numpy>=1.24.0",
    "ollama==0.6.1",
    "openai==2.21.0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "requests>=2.28.0",
    "rich==14.3.2",
    "typer==0.23.1",
    "tree-sitter-language-pack==0.13.0",
    "psutil==7.2.2",
    "PyGithub==2.8.1",
    "pygments==2.19.2",
    "python-gitlab==8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
    "types-requests>=2.31.0"
]

[project.scripts]
codefox = "codefox.main:cli"

[project.urls]
Documentation = "https://github.com/codefox-lab/CodeFox-CLI/wiki"
Homepage = "https://github.com/URLbug/CodeFox-CLI"
Issues = "https://github.com/URLbug/CodeFox-CLI/issues"
Security = "https://github.com/URLbug/CodeFox-CLI/blob/main/SECURITY.md"
Source = "https://github.com/URLbug/CodeFox-CLI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
strict_optional = true
ignore_missing_imports = true

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
source = ["codefox"]
branch = false

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError", "if TYPE_CHECKING:"]
